# -Scaleup-Excellenteam-myfs

./: README.md
fs/: CMakeLists.txt  Readme.md  build_and_run.sh  myfs.cpp  myfs.h  vfs.cpp
fs/tmp/: some_new_file
